deixando o site responsivo

--- a/04 - Landing page/index.html
+++ b/04 - Landing page/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Escola Criando Arte</title>
     <link rel="stylesheet" href="../04 - Landing page/assets/style.css">
+    <link rel="shortcut icon" href="../04 - Landing page/images/Icon.jpg">
 </head>
 <body>
         <header class="cabecalho">
@@ -14,7 +15,7 @@
                     <a href="">HOME</a>
                     <a href="">SOBRE NÓS</a>
                     <a href="">EXPOSIÇÕES</a>
-                    <a class="comece_ja" href="">COMECE JÁ</a>
+                    <a class="comece_ja" href="">LOGIN</a>
                 </div>
             </nav>
         </header>
@@ -23,10 +24,7 @@
         <section id="secao">
             <div class="fundo_secao">
                 <div class="esquerda">
-                    <div class="texto_descricao">
-                        <div class="logo">
-                            <img src="../04 - Landing page/images/Icon.jpg">
-                        </div>
+                    <div class="texto_descricao">            
                         <h1 class="titulo_descricao">
                             Escola Criando Arte
                         </h1>
@@ -47,6 +45,11 @@
 
         </section>
     </main>
+    <footer>
+        <div class="footer_copy">
+            <h2>&copy Copyright - Todos os direitos reservados<a href="https://github.com/gabriel-anesi">Gabriel Anesi de Oliveira</a></h2>
+        </div>
+    </footer>
 
 </body>
 </html>
