atualizando margem pesquisas relacionadas

--- a/06 - Clone resultados Google/index.html
+++ b/06 - Clone resultados Google/index.html
@@ -95,38 +95,70 @@
                 
                 <div class="grupo_pesquisas1">
                     <div class="pesquisa1">
+                        <div class="lupa_pesquisa1">
                         <img src="../06 - Clone resultados Google/images/lupa cinza.png">
+                        </div>
+                        <div class="conteudo_pesquisas_relacionadas">
                         <a href="https://www.google.com/search?rlz=1C1GCEA_enBR981BR981&biw=1183&bih=907&sxsrf=ALiCzsYvW5ksYoKVnrj4kx-xlgGrSHKafg:1659976074002&q=Lorem+Ipsum+generator&sa=X&ved=2ahUKEwji1-fh1Lf5AhUeSLgEHeQlDWYQ1QJ6BQiWARAB"><p>lorem ipsum <strong>generator</strong></strong></p></a>
+                        </div>
                     </div>
                     <div class="pesquisa2">
+                        <div class="lupa_pesquisa2">
                         <img src="../06 - Clone resultados Google/images/lupa cinza.png">
+                        </div>
+                        <div class="conteudo_pesquisas_relacionadas">
                         <a href="https://www.google.com/search?rlz=1C1GCEA_enBR981BR981&biw=1183&bih=907&sxsrf=ALiCzsYvW5ksYoKVnrj4kx-xlgGrSHKafg:1659976074002&q=Lorem+ipsum+dolor+sit+amet&sa=X&ved=2ahUKEwji1-fh1Lf5AhUeSLgEHeQlDWYQ1QJ6BQibARAB"><p>lorem ipsum <strong>dolor sit amet</strong></strong></p></a>
+                        </div>
                     </div>
                     <div class="pesquisa3">
+                        <div class="lupa_pesquisa3">
                         <img src="../06 - Clone resultados Google/images/lupa cinza.png">
+                        </div>
+                        <div class="conteudo_pesquisas_relacionadas">
                         <a href="https://www.google.com/search?rlz=1C1GCEA_enBR981BR981&biw=1183&bih=907&sxsrf=ALiCzsYvW5ksYoKVnrj4kx-xlgGrSHKafg:1659976074002&q=Lorem+ipsum+Word&sa=X&ved=2ahUKEwji1-fh1Lf5AhUeSLgEHeQlDWYQ1QJ6BQiZARAB"><p>lorem ipsum <strong>word</strong></strong></p></a>
+                        </div>
                     </div>
                     <div class="pesquisa4">
+                        <div class="lupa_pesquisa4">
                         <img src="../06 - Clone resultados Google/images/lupa cinza.png">
+                        </div>
+                        <div class="conteudo_pesquisas_relacionadas">
                         <a href="https://www.google.com/search?rlz=1C1GCEA_enBR981BR981&biw=1183&bih=907&sxsrf=ALiCzsYvW5ksYoKVnrj4kx-xlgGrSHKafg:1659976074002&q=Lorem+Ipsum+HTML&sa=X&ved=2ahUKEwji1-fh1Lf5AhUeSLgEHeQlDWYQ1QJ6BQiaARAB"><p>lorem ipsum <strong>html</strong></strong></p></a>
+                        </div>
                     </div>
                 </div>
                     <div class="grupo_pesquisas2">
                         <div class="pesquisa5">
+                            <div class="lupa_pesquisa5">
                             <img src="../06 - Clone resultados Google/images/lupa cinza.png">
+                            </div>
+                            <div class="conteudo_pesquisas_relacionadas">
                             <a href="https://www.google.com/search?rlz=1C1GCEA_enBR981BR981&biw=1183&bih=907&sxsrf=ALiCzsYvW5ksYoKVnrj4kx-xlgGrSHKafg:1659976074002&q=Lorem+Ipsum+Mussum&sa=X&ved=2ahUKEwji1-fh1Lf5AhUeSLgEHeQlDWYQ1QJ6BQiYARAB"><p>lorem ipsum <strong>mussum</strong></strong></p></a>
+                            </div>
                         </div>
                         <div class="pesquisa6">
+                            <div class="lupa_pesquisa6">
                             <img src="../06 - Clone resultados Google/images/lupa cinza.png">
+                            </div>
+                            <div class="conteudo_pesquisas_relacionadas">
                             <a href="https://www.google.com/search?rlz=1C1GCEA_enBR981BR981&biw=1183&bih=907&sxsrf=ALiCzsYvW5ksYoKVnrj4kx-xlgGrSHKafg:1659976074002&q=Lorem+ipsum+copy+pasta&sa=X&ved=2ahUKEwji1-fh1Lf5AhUeSLgEHeQlDWYQ1QJ6BQiXARAB"><p>lorem ipsum <strong>copy pasta</strong></strong></p></a>
+                            </div>
                         </div>
                         <div class="pesquisa7">
+                            <div class="lupa_pesquisa7">
                             <img src="../06 - Clone resultados Google/images/lupa cinza.png">
+                            </div>
+                            <div class="conteudo_pesquisas_relacionadas">
                             <a href="https://www.google.com/search?rlz=1C1GCEA_enBR981BR981&biw=1183&bih=907&sxsrf=ALiCzsYvW5ksYoKVnrj4kx-xlgGrSHKafg:1659976074002&q=Lorem+ipsum+contract&sa=X&ved=2ahUKEwji1-fh1Lf5AhUeSLgEHeQlDWYQ1QJ6BQiVARAB"><p>lorem ipsum <strong>contract</strong></strong></p></a>
+                            </div>
                         </div>
                         <div class="pesquisa8">
+                            <div class="lupa_pesquisa8">
                             <img src="../06 - Clone resultados Google/images/lupa cinza.png">
+                            </div>
+                            <div class="conteudo_pesquisas_relacionadas">
                             <a href="https://www.google.com/search?rlz=1C1GCEA_enBR981BR981&biw=1183&bih=907&sxsrf=ALiCzsYvW5ksYoKVnrj4kx-xlgGrSHKafg:1659976074002&q=Lorem+ipsum+table&sa=X&ved=2ahUKEwji1-fh1Lf5AhUeSLgEHeQlDWYQ1QJ6BQiSARAB"><p>lorem ipsum <strong>table</strong></strong></p></a>
+                            </div>
                         </div>
                      </div>                
             </div>
