atualizando endereço das imagens

--- a/11 - Starbucks/index.html
+++ b/11 - Starbucks/index.html
@@ -6,26 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Starbucks</title>
     <link rel="stylesheet" href="/_Estudos/11 - Starbucks/assets/css/style.css">
-    <link rel="shortcut icon" href="/11 - Starbucks/assets/images/logo.png">
+    <link rel="shortcut icon" href="/_Estudos/11 - Starbucks/assets/images/logo.png">
 </head>
 <body>
     <header>
         <div class="line"></div>
         <div class="container header--area">
             <div class="header--left">
-                <a href=""><img src="/11 - Starbucks/assets/images/logo.png"></a>
+                <a href=""><img src="/_Estudos/11 - Starbucks/assets/images/logo.png"></a>
             </div>
             <div class="header--right">
                 <div class="header--search">
                     <form>
                         <input type="text" name="search" placeholder="Search">
                         <button>
-                            <img src="/11 - Starbucks/assets/images/loupe.png">
+                            <img src="/_Estudos/11 - Starbucks/assets/images/loupe.png">
                         </button>
                     </form>
                 </div>
                 <div class="header--menu">
-                    <img src="/11 - Starbucks/assets/images/menu.png">
+                    <img src="/_Estudos/11 - Starbucks/assets/images/menu.png">
                 </div>
             </div>
         </div>
@@ -35,9 +35,9 @@
             <h1>Starbucks&#174 <br>Happy Hour</h1>
             <span>We'll meet you in your inbox. Drink deals are on their way.</span>
             <div class="banner--images">
-                <img src="/11 - Starbucks/assets/images/c1.jpg" alt="">
-                <img src="/11 - Starbucks/assets/images/c2.jpg" alt="">
-                <img src="/11 - Starbucks/assets/images/c3.jpg" alt="">
+                <img src="/_Estudos/11 - Starbucks/assets/images/c1.jpg" alt="">
+                <img src="/_Estudos/11 - Starbucks/assets/images/c2.jpg" alt="">
+                <img src="/_Estudos/11 - Starbucks/assets/images/c3.jpg" alt="">
             </div>
         </div>
     </section>
