# nos links vazios

--- a/10 - Projeto Awax/index.html
+++ b/10 - Projeto Awax/index.html
@@ -21,15 +21,15 @@
                 <img class="menu-opener" src="../10 - Projeto Awax/Assets/Images/menu.png">
                 <nav>
                     <ul>
-                        <li class="active"><a href="">Home</a></li>
-                        <li><a href="">About us</a></li>
-                        <li><a href="">Services</a></li>
-                        <li><a href="">Our projects</a></li>
-                        <li><a href="">Our team</a></li>
-                        <li><a href="">Happy clients</a></li>
-                        <li><a href="">Price</a></li>
-                        <li><a href="">Some facts</a></li>
-                        <li><a href="">Contact us</a></li>
+                        <li class="active"><a href="#">Home</a></li>
+                        <li><a href="#">About us</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Our projects</a></li>
+                        <li><a href="#">Our team</a></li>
+                        <li><a href="#">Happy clients</a></li>
+                        <li><a href="#">Price</a></li>
+                        <li><a href="#">Some facts</a></li>
+                        <li><a href="#">Contact us</a></li>
                     </ul>
                 </nav>
             </div>
@@ -43,19 +43,19 @@
                     <div class="slidearea">
                         <h1>Design is about <br><span>Communication</span></h1>
                         <h2>Call us: +00 0 1234 5678</h2>
-                        <a href="" class="button">Get in touch!</a>
+                        <a href="#" class="button">Get in touch!</a>
                     </div>
                 </div><div class="slide">
                     <div class="slidearea">
                         <h1>Design is about <br><span>2</span></h1>
                         <h2>Call us: +00 0 1234 5678</h2>
-                        <a href="" class="button">Get in touch!</a>
+                        <a href="#" class="button">Get in touch!</a>
                     </div>
                 </div><div class="slide">
                         <div class="slidearea">
                             <h1>Design is about <br><span>3</span></h1>
                             <h2>Call us: +00 0 1234 5678</h2>
-                            <a href="" class="button">Get in touch!</a>
+                            <a href="#" class="button">Get in touch!</a>
                         </div>
                     </div>
              <div class="sliders-pointers">
@@ -73,7 +73,7 @@
                     <div class="section-aboutus--left">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam venenatis, tortor non dignissim efficitur, ligula turpis suscipit arcu, quis scelerisque tortor ex in erat. Suspendisse potenti. Aenean risus tellus, tempus eget eros quis, vehicula iaculis sapien. Donec placerat aliquam eros eu facilisis. Etiam volutpat orci interdum dolor egestas posuere. Donec ac nunc dui. Mauris mollis nunc sit amet elit bibendum, a tincidunt augue commodo.</p>
                         <br>
-                        <a href="" class="button">Learn More</a>
+                        <a href="#" class="button">Learn More</a>
                     </div>
                     <div class="section-aboutus--right">
                         <img src="../10 - Projeto Awax/media/foto6.jpg">
@@ -243,7 +243,7 @@
 
                 </div>
 
-                <a href="" class="button">More projects</a>
+                <a href="#" class="button">More projects</a>
 
                 </div>
 
@@ -264,13 +264,13 @@
                             <div class="section-team--name">Jane Doe</div>
                             <div class="section-team--role">Master Mind</div>
                             <div class="section-team--social">
-                                <a href=""><img src="../10 - Projeto Awax/Assets/Images/twitter.png"></a>
-                                <a href=""><img src="../10 - Projeto Awax/Assets/Images/instagram.png"></a>
-                                <a href=""><img src="../10 - Projeto Awax/Assets/Images/linkedin.png"></a>
-                                <a href=""><img src="../10 - Projeto Awax/Assets/Images/facebook.png"></a>
-                                <a href=""><img src="../10 - Projeto Awax/Assets/Images/youtube.png"></a>
-                                <a href=""><img src="../10 - Projeto Awax/Assets/Images/google-plus.png"></a>
-                                <a href=""><img src="../10 - Projeto Awax/Assets/Images/mais.png"></a>
+                                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/twitter.png"></a>
+                                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/instagram.png"></a>
+                                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/linkedin.png"></a>
+                                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/facebook.png"></a>
+                                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/youtube.png"></a>
+                                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/google-plus.png"></a>
+                                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/mais.png"></a>
                             </div>
                             </div>
                         </div><div class="slide">
@@ -279,13 +279,13 @@
                             <div class="section-team--name">Mike Shiller</div>
                             <div class="section-team--role">Creative Head</div>
                             <div class="section-team--social">
-                                <a href=""><img src="../10 - Projeto Awax/Assets/Images/twitter.png"></a>
-                                <a href=""><img src="../10 - Projeto Awax/Assets/Images/instagram.png"></a>
-                                <a href=""><img src="../10 - Projeto Awax/Assets/Images/linkedin.png"></a>
-                                <a href=""><img src="../10 - Projeto Awax/Assets/Images/facebook.png"></a>
-                                <a href=""><img src="../10 - Projeto Awax/Assets/Images/youtube.png"></a>
-                                <a href=""><img src="../10 - Projeto Awax/Assets/Images/google-plus.png"></a>
-                                <a href=""><img src="../10 - Projeto Awax/Assets/Images/mais.png"></a>
+                                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/twitter.png"></a>
+                                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/instagram.png"></a>
+                                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/linkedin.png"></a>
+                                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/facebook.png"></a>
+                                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/youtube.png"></a>
+                                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/google-plus.png"></a>
+                                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/mais.png"></a>
                             </div>
                             </div>
                         </div><div class="slide">
@@ -294,13 +294,13 @@
                             <div class="section-team--name">Anna Johns</div>
                             <div class="section-team--role">Technical Lead</div>
                             <div class="section-team--social">
-                                <a href=""><img src="../10 - Projeto Awax/Assets/Images/twitter.png"></a>
-                                <a href=""><img src="../10 - Projeto Awax/Assets/Images/instagram.png"></a>
-                                <a href=""><img src="../10 - Projeto Awax/Assets/Images/linkedin.png"></a>
-                                <a href=""><img src="../10 - Projeto Awax/Assets/Images/facebook.png"></a>
-                                <a href=""><img src="../10 - Projeto Awax/Assets/Images/youtube.png"></a>
-                                <a href=""><img src="../10 - Projeto Awax/Assets/Images/google-plus.png"></a>
-                                <a href=""><img src="../10 - Projeto Awax/Assets/Images/mais.png"></a>
+                                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/twitter.png"></a>
+                                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/instagram.png"></a>
+                                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/linkedin.png"></a>
+                                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/facebook.png"></a>
+                                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/youtube.png"></a>
+                                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/google-plus.png"></a>
+                                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/mais.png"></a>
                             </div>
                             </div>
                         </div><div class="slide">
@@ -309,13 +309,13 @@
                             <div class="section-team--name">Jane Doe</div>
                             <div class="section-team--role">Master Mind</div>
                             <div class="section-team--social">
-                                <a href=""><img src="../10 - Projeto Awax/Assets/Images/twitter.png"></a>
-                                <a href=""><img src="../10 - Projeto Awax/Assets/Images/instagram.png"></a>
-                                <a href=""><img src="../10 - Projeto Awax/Assets/Images/linkedin.png"></a>
-                                <a href=""><img src="../10 - Projeto Awax/Assets/Images/facebook.png"></a>
-                                <a href=""><img src="../10 - Projeto Awax/Assets/Images/youtube.png"></a>
-                                <a href=""><img src="../10 - Projeto Awax/Assets/Images/google-plus.png"></a>
-                                <a href=""><img src="../10 - Projeto Awax/Assets/Images/mais.png"></a>
+                                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/twitter.png"></a>
+                                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/instagram.png"></a>
+                                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/linkedin.png"></a>
+                                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/facebook.png"></a>
+                                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/youtube.png"></a>
+                                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/google-plus.png"></a>
+                                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/mais.png"></a>
                             </div>
                             </div>
                         </div>
@@ -402,7 +402,7 @@
                                 - <br>
                                 Custom views <br>
                             </h2>
-                            <a class="button active" href="">CHOOSE</a>
+                            <a class="button active" href="#">CHOOSE</a>
                         </div>
                         <div class="plan">
                             <p><br><br>STANDARD<br></p>
@@ -418,7 +418,7 @@
                                 - <br>
                                 Custom views <br>
                             </h2>
-                            <a class="button" href="">CHOOSE</a>
+                            <a class="button" href="#">CHOOSE</a>
                         </div>
                         <div class="plan">
                             <p><br><br>LUXE<br></p>
@@ -434,7 +434,7 @@
                                 - <br>
                                 Custom views <br>
                             </h2>
-                            <a class="button" href="">CHOOSE</a>
+                            <a class="button" href="#">CHOOSE</a>
                         </div>
                         <div class="plan">
                             <p><br><br>PREMIUM<br></p>
@@ -450,7 +450,7 @@
                                 - <br>
                                 Custom views <br>
                             </h2>
-                            <a class="button" href="">CHOOSE</a>
+                            <a class="button" href="#">CHOOSE</a>
                         </div>
                        
                     </div>
@@ -504,7 +504,7 @@
                         <div class="pointer"></div>
                     </div>
                     <div class="premium-button">
-                        <a href="" class="button">GET IN TOUCH</a>
+                        <a href="#" class="button">GET IN TOUCH</a>
                     </div>
                 </div>
              </div>
@@ -548,37 +548,37 @@
         <section class="default-light">
             <div class="social">
                 <div class="social-tell-about-us">
-                    <a href=""><img src="../10 - Projeto Awax/Assets/Images/share.png"></a>
+                    <a href="#"><img src="../10 - Projeto Awax/Assets/Images/share.png"></a>
                 </div>                
                 <div class="social-text">
                     <h4>TELL ABOUT US:</h4>
                 </div>
                 <div class="social-twitter">
-                    <a href=""><img src="../10 - Projeto Awax/Assets/Images/twitter-48.png"></a>
+                    <a href="#"><img src="../10 - Projeto Awax/Assets/Images/twitter-48.png"></a>
                 </div>
                 <div class="social-text">
                     <h4>152</h4>
                 </div>
                 <div class="social-linkedin">
-                    <a href=""><img src="../10 - Projeto Awax/Assets/Images/linkedin-circundado-48.png"></a>
+                    <a href="#"><img src="../10 - Projeto Awax/Assets/Images/linkedin-circundado-48.png"></a>
                 </div>
                 <div class="social-text">
                     <h4>31</h4>
                 </div>
                 <div class="social-facebook">
-                    <a href=""><img src="../10 - Projeto Awax/Assets/Images/facebook-novo-48.png"></a>
+                    <a href="#"><img src="../10 - Projeto Awax/Assets/Images/facebook-novo-48.png"></a>
                 </div>
                 <div class="social-text">
                     <h4>165</h4>
                 </div>
                 <div class="social-google-plus">
-                    <a href=""><img src="../10 - Projeto Awax/Assets/Images/google-plus-48.png"></a>
+                    <a href="#"><img src="../10 - Projeto Awax/Assets/Images/google-plus-48.png"></a>
                 </div>
                 <div class="social-text">
                     <h4>22</h4>
                 </div>
                 <div class="social-pinterest">
-                    <a href=""><img src="../10 - Projeto Awax/Assets/Images/pinterest-48.png"></a>
+                    <a href="#"><img src="../10 - Projeto Awax/Assets/Images/pinterest-48.png"></a>
                 </div>
                 <div class="social-text">
                     <h4>165</h4>
@@ -608,7 +608,7 @@
                         <input type="text" name="message" placeholder="MESSAGE">
                         </div>
                         <div class="send_message_button">
-                        <a href="" class="button">SEND MESSAGE</a>
+                        <a href="#" class="button">SEND MESSAGE</a>
                         </div>          
                 </form>      
             </div>
@@ -656,12 +656,12 @@
         <section class="default dark">
             <div class="footer">
             <div class="footer-left">
-                <a href=""><img src="../10 - Projeto Awax/Assets/Images/twitter-48.png"></a>
-                <a href=""><img src="../10 - Projeto Awax/Assets/Images/icons8-instagram-48.png"></a>
-                <a href=""><img src="../10 - Projeto Awax/Assets/Images/linkedin-circundado-48.png"></a>
-                <a href=""><img src="../10 - Projeto Awax/Assets/Images/facebook-novo-48.png"></a>
-                <a href=""><img src="../10 - Projeto Awax/Assets/Images/icons8-youtube-48.png"></a>
-                <a href=""><img src="../10 - Projeto Awax/Assets/Images/google-plus-48.png"></a>
+                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/twitter-48.png"></a>
+                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/icons8-instagram-48.png"></a>
+                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/linkedin-circundado-48.png"></a>
+                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/facebook-novo-48.png"></a>
+                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/icons8-youtube-48.png"></a>
+                <a href="#"><img src="../10 - Projeto Awax/Assets/Images/google-plus-48.png"></a>
                 <h4>AWAX &#169 2016</h4>
             </div>
             <div class="footer-middle">
@@ -670,7 +670,7 @@
             <div class="footer-right">
                 <form method="post">
                     <input type="email" name="email" placeholder="EMAIL TO SUBSCRIBE"><br>
-                    <a href="" class="button">SUBSCRIBE</a>
+                    <a href="#" class="button">SUBSCRIBE</a>
                 </form>
                 </div>
         </div>
